--- a/package.json
+++ b/package.json
@@ -19,9 +19,12 @@
     "express-session": "^1.17.0",
     "express-validator": "^6.4.0",
     "handlebars-helpers": "^0.10.0",
+    "http": "0.0.1-security",
     "knex": "^0.20.11",
     "mysql2": "^2.1.0",
+    "nodemon": "^2.0.2",
     "passport": "^0.4.1",
-    "passport-local": "^1.0.0"
+    "passport-local": "^1.0.0",
+    "socket.io": "^2.3.0"
   }
 }
